--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -6,7 +6,7 @@
   <body>
     <%- include('../partials/nav') %>
 
-    <div class="container">
+    <div class="container mt-3">
 
       <h3 class="mb-3">Login</h3>
 
