--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -1,18 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
-
-    <div class="container mb-3">
-
-      <div class="jumbotron">
-        <h1>컴퓨터공학선도</h1>
-        <P>^.^</p>
+<head>
+  <%- include('../partials/head') %>
+</head>
+<body>
+  <%- include('../partials/nav') %>
+  <div class="container mt-3">
+    <div class="bg-light p-5 rounded-lg m-3">
+      <h1>컴퓨터공학선도</h1>
+      <P>^.^</p>
       </div>
-
     </div>
-  </body>
-</html>
+    <div class="container-sm">
+      <div class="row g-2">
+        <div class="col">
+          <a href="/posts"><h2 class="mb-3">Board</h2></a>
+
+          <table class="board-table table table-sm border-bottom">
+
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Title</th>
+                <th scope="col" class="author">Author</th>
+                <th scope="col" class="date">Date</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <% if(posts == null || posts.length == 0){ %>
+                <tr>
+                  <td colspan=2> There is no data to show :( </td>
+                </tr>
+                <% } %>
+                <% posts.forEach(function(post) { %>
+                  <tr>
+                    <td>
+                      <a href="/posts/<%= post._id %>"><div class="ellipsis"><%= post.title %></div></a>
+                    </td>
+                    <td class="author">
+                      <div class="ellipsis"><%= post.author ? post.author.username : "" %></div>
+                    </td>
+                    <td class="date">
+                      <span data-date="<%= post.createdAt %>"></span>
+                    </td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="col">
+              <a href="#"><h2 class="mb-3">Gallary</h2></a>
+              <div class="card">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"  role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="true"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">First slide</text></svg>
+                    </div>
+                    <div class="carousel-item">
+                      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"  role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Second slide</text></svg>
+                    </div>
+                    <div class="carousel-item">
+                      <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"  role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#555" dy=".3em">Third slide</text></svg>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+    </html>
