--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,23 +1,23 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
-  <div class="container">
-    <div class="navbar-brand">My Website</div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <div class="container-fluid">
+    <div class="navbar-brand">컴퓨터공학선도</div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/posts" class="nav-link">Board</a></li>
       </ul>
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav mb-2 mb-lg-0">
         <% if(isAuthenticated){ %>
           <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
           <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
-        <% } else { %>
-          <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
-          <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
-        <% } %>
+          <% } else { %>
+            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <% } %>
       </ul>
     </div>
   </div>
