--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -6,7 +6,7 @@
   <body>
     <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+    <div class="container mt-3">
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
