--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -6,7 +6,7 @@
   <body>
     <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+    <div class="container mt-3">
 
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb p-1 pl-2 pr-2">
@@ -43,9 +43,31 @@
         <a class="btn btn-primary" href="/posts">Back</a>
         <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
           <a class="btn btn-primary" href="/posts/<%= post._id %>/edit">Edit</a>
-          <form action="/posts/<%= post._id %>?_method=delete" method="post" class="d-inline">
-            <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
-          </form>
+
+          <!-- 삭제 버튼(Modal) -->
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deletePost">
+            삭제
+          </button>
+          <div class="modal fade" id="deletePost" tabindex="-1" aria-labelledby="deletePostLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="deletePostLabel">삭제</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  삭제하시겠습니까?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+                  <form action="/posts/<%= post._id %>?_method=delete" method="post" class="d-inline">
+                    <button type="submit" class="btn btn-primary">삭제</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <% } %>
       </div>
 
