--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -85,7 +85,7 @@
         <% } %>
 
         <div class="buttons">
-          <a class="btn btn-primary" href="/users/<%= username %>">Back</a>
+          <a class="btn btn-primary" href="#" onClick="history.go(-1); return false;">Back</a>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
 
