--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/nav') %>
+    <%- include('../partials/nav_search') %>
 
     <div class="container mt-3">
 
@@ -17,7 +17,7 @@
         </ol>
       </nav>
 
-      <form action="/posts/<%= post._id %>?_method=put" method="post">
+      <form action="/posts/<%= post._id %>?_method=put<%= getPostQueryString(true) %>" method="post">
 
         <div class="form-group">
           <label for="title">Title</label>
@@ -42,7 +42,7 @@
         <% } %>
 
         <div>
-          <a class="btn btn-primary" href="/posts/<%= post._id %>">Back</a>
+          <a class="btn btn-primary" href="#" onClick="history.go(-1); return false;">Back</a>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
 
