--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/nav') %>
+    <%- include('../partials/nav_search') %>
 
     <div class="container mt-3">
 
@@ -41,7 +41,7 @@
         <% } %>
 
         <div>
-          <a class="btn btn-primary" href="/posts">Back</a>
+          <a class="btn btn-primary" href="#" onClick="history.go(-1); return false;">Back</a> 
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
 
