--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -21,17 +21,22 @@
         <li class="nav-item"><a href="#" class="nav-link">Apply</a></li>
 
         <!-- Dropdown -->
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarBoardDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Board
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarBoardDropdown">
-            <li><a class="dropdown-item" href="/posts">자유게시판</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Board
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">자유게시판</a></li>
+                <li><a class="dropdown-item" href="#">QnA</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
           </ul>
-        </li>
+        </div>
+
       </ul>
       <!-- Links -->
 
