--- a/views/partials/nav_search.ejs
+++ b/views/partials/nav_search.ejs
@@ -21,21 +21,19 @@
         <li class="nav-item"><a href="#" class="nav-link">Apply</a></li>
 
         <!-- Dropdown -->
-        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Board
-              </a>
-              <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">자유게시판</a></li>
-                <li><a class="dropdown-item" href="#">QnA</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Board
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+              <li><a class="dropdown-item" href="/posts">자유게시판</a></li>
+              <li><a class="dropdown-item" href="#">QnA</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
 
       </ul>
       <!-- Links -->
@@ -43,8 +41,31 @@
       <!-- Search form / Login from -->
       <ul class="navbar-nav">
         <!-- Search form -->
-        <div class="md-form nav-search-control">
-          <input class="form-control border-0 nav-search shadow-none bg-dark" type="text" placeholder="Search" aria-label="Search">
+        <div class="nav-item dropdown">
+          <form action="/posts" method="get" class="post-index-tool" autocomplete="off" >
+            <div class="input-group">
+              <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Search
+              </a>
+              <div class="dropdown-menu dropdown-menu-dark" aria-labelledby="searchDropdown" style="width: 100%;">
+                <div class="px-4 py-3">
+                  <div class="mb-3">
+                    <div class="md-form nav-search-control">
+                      <input class="form-control border-0 nav-search shadow-none bg-dark" type="text" placeholder="Search" aria-label="Search" minLength="3" name="searchText" value="<%= searchText %>">
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <select name="searchType" class="form-select">
+                      <option value="title,body" <%= searchType=='title,body'?'selected':'' %>>Title, Body</option>
+                      <option value="title" <%= searchType=='title'?'selected':'' %>>Title</option>
+                      <option value="body" <%= searchType=='body'?'selected':'' %>>Body</option>
+                    </select>
+                  </div>
+                  <button class="btn btn-outline-primary" type="submit">search</button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
         <% if(isAuthenticated){ %>
           <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
