--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/nav_search') %>
+    <%- include('../partials/nav') %>
 
     <div class="container mt-3">
 
