--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark navbar-static-top bg-dark">
 
   <div class="container-lg">
 
@@ -19,7 +19,7 @@
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="#" class="nav-link">Apply</a></li>
-        
+
         <!-- Dropdown -->
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
