--- a/views/partials/nav_search.ejs
+++ b/views/partials/nav_search.ejs
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark navbar-static-top bg-dark">
 
   <div class="container-lg">
 
