--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -6,7 +6,7 @@
   <body>
     <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+    <div class="container mt-3">
 
       <h3 class="mb-3">Edit User</h3>
 
