--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -6,7 +6,7 @@
   <body>
     <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+    <div class="container mt-3">
 
       <h3 class="contentBoxTop"><%= user.username %></h3>
 
