search - author, highlights

--- a/views/partials/nav_search.ejs
+++ b/views/partials/nav_search.ejs
@@ -59,6 +59,7 @@
                       <option value="title,body" <%= searchType=='title,body'?'selected':'' %>>Title, Body</option>
                       <option value="title" <%= searchType=='title'?'selected':'' %>>Title</option>
                       <option value="body" <%= searchType=='body'?'selected':'' %>>Body</option>
+                      <option value="author" <%= searchType=='author'?'selected':'' %>>Author</option>
                     </select>
                   </div>
                   <button class="btn btn-outline-primary" type="submit">search</button>
