--- a/public/css/master.css
+++ b/public/css/master.css
@@ -153,3 +153,9 @@ body {
     opacity: 0.7;
     top: 0;
 }
+
+/* Search Highlight
+-------------------------------------------------- */
+.highlighted {
+  background-color: yellow;
+}
