--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -29,10 +29,14 @@
           <% posts.forEach(function(post) { %>
             <tr>
               <td>
-                <a href="/posts/<%= post._id %><%= getPostQueryString() %>"><div class="ellipsis"><%= post.title %></div></a>
+                <a href="/posts/<%= post._id %><%= getPostQueryString() %>">
+                  <div data-search-highlight="title" class="ellipsis"><%= post.title %></div>
+                </a>
               </td>
               <td class="author">
-                <div class="ellipsis"><%= post.author ? post.author.username : "" %></div>
+                <a href="/posts<%= getPostQueryString(false, { searchType:'author!', searchText:post.author.username }) %>">
+                  <div data-search-highlight="author" class="ellipsis"><%= post.author ? post.author.username : "" %></div>
+                </a>
               </td>
               <td class="date">
                 <span data-date="<%= post.createdAt %>"></span>
