--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -71,6 +71,30 @@
         <% } %>
       </div>
 
+      <h4 class="mt-3">Comments</h4>
+
+      <% if(commentTrees.length){ %>
+        <div class="mt-3 border-bottom">
+          <% commentTrees.forEach(function(comment) { %>
+            <%- include('./partials/comment-show', {
+              post: post,
+              comment: comment,
+              commentForm: commentForm,
+              commentError: commentError,
+            }); %>
+          <% }) %>
+        </div>
+      <% } %>
+
+      <div class="mt-3">
+        <%- include('./partials/comment-form', {
+          actionUrl:'/comments?postId=' + post._id,
+          comment: {},
+          commentForm: commentForm,
+          commentError: commentError,
+          parentComment: null,
+        }); %>
+      </div>
     </div>
   </body>
 </html>
