--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,6 +9,7 @@
 
 <!-- web font -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <!-- my css -->
 <link rel="stylesheet" href="/css/master.css">
