--- a/views/partials/nav_search.ejs
+++ b/views/partials/nav_search.ejs
@@ -27,10 +27,10 @@
               Board
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">공지사항</a></li>
+              <li><a class="dropdown-item" href="/posts/notice">공지사항</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/posts">자유게시판</a></li>
-              <li><a class="dropdown-item" href="#">QnA</a></li>
+              <li><a class="dropdown-item" href="/posts/general">자유게시판</a></li>
+              <li><a class="dropdown-item" href="/posts/qna">QnA</a></li>
             </ul>
           </li>
         </ul>
