--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,4 +17,8 @@
 <!-- my js -->
 <script src="/js/script.js"></script>
 
+<!-- baguetteBox -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" async></script>
+
 <title>컴퓨터공학선도</title>
