--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -15,7 +15,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item main-carousel-item active">
-        <img src="https://picsum.photos/2000" class="d-block w-100" alt="idk">
+        <img src="https://images.pexels.com/photos/60626/pexels-photo-60626.jpeg?cs=srgb&dl=pexels-fabricio-trujillo-60626.jpg&fm=jpg" class="d-block w-100" alt="idk">
         <div class="overlay"></div>
         <div class="container">
           <div class="carousel-caption main-carousel-caption text-start">
@@ -26,24 +26,24 @@
         </div>
       </div>
       <div class="carousel-item main-carousel-item">
-        <img src="https://picsum.photos/2002" class="d-block w-100" alt="idk">
+        <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?cs=srgb&dl=pexels-fauxels-3183197.jpg&fm=jpg" class="d-block w-100" alt="idk">
         <div class="overlay"></div>
         <div class="container">
           <div class="carousel-caption main-carousel-caption text-start">
-            <h1>활동</h1>
-            <p>나도 뭐하는지 모름</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">자세히</a></p>
+            <h1>소개</h1>
+            <p>컴퓨터공학선도에 대하여</p>
+            <p><a class="btn btn-lg btn-primary" href="/about" role="button">자세히</a></p>
           </div>
         </div>
       </div>
       <div class="carousel-item main-carousel-item">
-        <img src="https://picsum.photos/2004" class="d-block w-100" alt="idk">
+        <img src="https://images.pexels.com/photos/122400/pexels-photo-122400.jpeg?cs=srgb&dl=pexels-markus-spiske-122400.jpg&fm=jpg" class="d-block w-100" alt="idk">
         <div class="overlay"></div>
         <div class="container">
           <div class="carousel-caption main-carousel-caption text-start">
             <h1>갤러리</h1>
-            <p>인터넷에서 찾은 멋진 사진들이 잠들어 있는 곳</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">보러가기</a></p>
+            <p>동아리 활동사진</p>
+            <p><a class="btn btn-lg btn-primary" href="/gallery" role="button">보러가기</a></p>
           </div>
         </div>
       </div>
@@ -64,26 +64,26 @@
 
     <!-- Three columns of text below the carousel -->
     <div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <div class="col-lg-4 gaon-marketing">
+        <img class="bd-placeholder-img rounded-circle" src="https://img.freepik.com/free-photo/note-cork_1101-772.jpg?size=626&ext=jpg">
 
         <h2>공지사항</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">자세히보기 &raquo;</a></p>
+        <p>컴퓨터공학선도의 최신 소식과 공지사항을 확인하세요.</p>
+        <p><a class="btn btn-secondary" href="/posts/notice" role="button">자세히보기 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <div class="col-lg-4 gaon-marketing">
+        <img class="bd-placeholder-img rounded-circle" src="https://static4.depositphotos.com/1011415/290/v/600/depositphotos_2902188-stock-illustration-writing-fountain-pen.jpg">
 
         <h2>신청</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <p>컴퓨터공학선도에 들어오세요</p>
         <p><a class="btn btn-secondary" href="#" role="button">자세히보기 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+      <div class="col-lg-4 gaon-marketing">
+        <img class="bd-placeholder-img rounded-circle" src="https://st.depositphotos.com/1047404/4478/i/600/depositphotos_44788455-stock-photo-colorful-modern-art-gallery.jpg">
 
         <h2>갤러리</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">자세히보기 &raquo;</a></p>
+        <p>컴퓨터공학선도에서 진행하는 활동사진을 보세요.</p>
+        <p><a class="btn btn-secondary" href="/gallery" role="button">자세히보기 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -92,44 +92,6 @@
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
-    </div>
-    <hr class="featurette-divider">
-
-    <!-- /END THE FEATURETTES -->
 
     </div><!-- /.container -->
   </div>
