--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -21,7 +21,7 @@
           <div class="carousel-caption main-carousel-caption text-start">
             <h1>컴퓨터공학선도</h1>
             <p>가온고등학교의 컴퓨터 공학을 선도하는 동아리</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">신청</a></p>
+            <p><a class="btn btn-lg btn-primary disabled" href="#" role="button" aria-disabled="true">신청</a></p>
           </div>
         </div>
       </div>
@@ -75,8 +75,8 @@
         <img class="bd-placeholder-img rounded-circle" src="https://static4.depositphotos.com/1011415/290/v/600/depositphotos_2902188-stock-illustration-writing-fountain-pen.jpg">
 
         <h2>신청</h2>
-        <p>컴퓨터공학선도에 들어오세요</p>
-        <p><a class="btn btn-secondary" href="#" role="button">자세히보기 &raquo;</a></p>
+        <p>컴퓨터공학선도에 들어오세요.</p>
+        <p><a class="btn btn-secondary disabled" href="#" role="button" aria-disabled="true">자세히보기 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4 gaon-marketing">
         <img class="bd-placeholder-img rounded-circle" src="https://st.depositphotos.com/1047404/4478/i/600/depositphotos_44788455-stock-photo-colorful-modern-art-gallery.jpg">
@@ -86,11 +86,6 @@
         <p><a class="btn btn-secondary" href="/gallery" role="button">자세히보기 &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
 
 
     </div><!-- /.container -->
