--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,4 +1,7 @@
 <footer class="container">
-  <p class="float-end"><a href="#">Back to top</a></p>
-  <p>2019-2020 &middot 가온고등학교 동아리 「컴퓨터공학선도」</p>
+  <div>
+    <hr class="featurette-divider">
+    <p class="float-end"><a href="#">Back to top</a></p>
+    <p>2019-2020 &middot 가온고등학교 동아리 「컴퓨터공학선도」</p>
+  </div>
 </footer>
