--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -88,5 +88,6 @@
                 </form>
 
               </div>
+              <%- include('../partials/foot') %>
             </body>
             </html>
