--- a/views/home/gallery.ejs
+++ b/views/home/gallery.ejs
@@ -18,8 +18,8 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
-      <div class="gaon-gallery row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="gaon-gallery">
           <div class="col">
             <div class="card shadow-sm">
               <a href="/images/bridge.jpg" class="gallery-img" data-caption="다리">
@@ -83,7 +83,7 @@
               </a>
             </div>
           </div>
-
+        </div>
       </div>
     </div>
   </div>
