--- a/views/posts/board.ejs
+++ b/views/posts/board.ejs
@@ -8,7 +8,7 @@
 
     <div class="container mt-3">
 
-      <h2 class="mb-3">Board</h2>
+      <h2 class="mb-3"><%= board.display %></h2>
 
       <table class="board-table table table-sm border-bottom">
 
