--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -48,7 +48,7 @@
       <div class="mt-3">
         <a class="btn btn-primary" href="#" onClick="history.go(-1); return false;">Back</a>
         <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
-          <a class="btn btn-primary" href="/posts/<%= post._id %>/edit<%= getPostQueryString() %>">Edit</a>
+          <a class="btn btn-primary" href="/posts/<%= post.board.board %>/<%= post._id %>/edit<%= getPostQueryString() %>">Edit</a>
 
           <!-- 삭제 버튼(Modal) -->
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deletePost">
@@ -66,7 +66,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-                  <form action="/posts/<%= post._id %>?_method=delete<%= getPostQueryString(true) %>" method="post" class="d-inline">
+                  <form action="/posts/<%= post.board.board %>/<%= post._id %>?_method=delete<%= getPostQueryString(true) %>" method="post" class="d-inline">
                     <button type="submit" class="btn btn-primary">삭제</button>
                   </form>
                 </div>
