navbar - 'about' item to dropdown

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,26 +17,30 @@
       <!-- Links -->
       <ul class="navbar-nav me-auto">
         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Apply</a></li>
-
         <!-- Dropdown -->
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Board
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-              <li><a class="dropdown-item" href="/posts/notice">공지사항</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/posts/general">자유게시판</a></li>
-              <li><a class="dropdown-item" href="/posts/qna">QnA</a></li>
-            </ul>
-          </li>
-        </ul>
-
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarAbout" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            About
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarAbout">
+            <li><a class="dropdown-item" href="/about">소개</a></li>
+            <li><a class="dropdown-item" href="/gallery">갤러리</a></li>
+          </ul>
+        </li>
+        <li class="nav-item"><a href="#" class="nav-link">Apply</a></li>
+        <!-- Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarBoard" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Board
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarBoard">
+            <li><a class="dropdown-item" href="/posts/notice">공지사항</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/posts/general">자유게시판</a></li>
+            <li><a class="dropdown-item" href="/posts/qna">QnA</a></li>
+          </ul>
+        </li>
       </ul>
-      <!-- Links -->
 
       <!-- Login from -->
       <ul class="navbar-nav">
