gallery - minor fix

--- a/views/home/gallery.ejs
+++ b/views/home/gallery.ejs
@@ -54,7 +54,7 @@
         </a>
       </div>
       <div class="card shadow-sm">
-        <a href="/images/traffictraffic.jpg">
+        <a href="/images/traffic.jpg">
           <img src="/images/traffic.jpg">
         </a>
       </div>
