--- a/views/posts/partials/comment-form.ejs
+++ b/views/posts/partials/comment-form.ejs
@@ -15,7 +15,7 @@
       <div class="col-8">
         <div class="mt-3 d-flex flex-row align-items-center p-3 comment-color form-control">
           <textarea name="text" rows="3"
-          class="form-control comment-control <%= (commentError._id == comment._id && commentError.parentComment == parentComment && commentError.errors.text)?'is-invalid':'' %>"><%= (commentForm._id == comment._id)?commentForm.form.text:comment.text %><%= !isAuthenticated?'댓글을 다시려면 로그인하세요.':'' %></textarea>
+          class="form-control comment-control <%= (commentError._id == comment._id && commentError.parentComment == parentComment && commentError.errors.text)?'is-invalid':'' %>"><%= (commentForm._id == comment._id)?commentForm.form.text:comment.text %><%= !isAuthenticated?'로그인하세요.':'' %></textarea>
         </div>
       </div>
       <div class="col-4">
