--- a/views/posts/board.ejs
+++ b/views/posts/board.ejs
@@ -29,7 +29,7 @@
           <% posts.forEach(function(post) { %>
             <tr>
               <td>
-                <a href="/posts/<%= board.board %>/<%= post._id %><%= getPostQueryString() %>" class="title-container">
+                <a href="/posts/<%= board.name %>/<%= post._id %><%= getPostQueryString() %>" class="title-container">
                   <div data-search-highlight="title" class="title-ellipsis ellipsis float-left" style="display: inline;">
                     <span class="title-text"><%= post.title %></span>
                   </div>
@@ -58,8 +58,8 @@
       <div class="row mb-3">
 
         <div class="col-2">
-          <% if(isAuthenticated && !(board.board=='notice')){ %>
-            <a class="btn btn-primary" href="/posts/<%= board.board %>/new<%= getPostQueryString() %>">New</a>
+          <% if(isAuthenticated && !(board.name=='notice')){ %>
+            <a class="btn btn-primary" href="/posts/<%= board.name %>/new<%= getPostQueryString() %>">New</a>
           <% } %>
         </div>
 
@@ -75,13 +75,13 @@
             </li>
             <% for(i=1;i<=maxPage;i++){ %>
               <% if(i==1 || i==maxPage || (i>=currentPage-offset && i<=currentPage+offset)){ %>
-                <li class="page-item <%= currentPage==i?'active':'' %>"><a class="page-link" href="/posts/<%= board.board %><%= getPostQueryString(false, {page:i}) %>"> <%= i %> </a></li>
+                <li class="page-item <%= currentPage==i?'active':'' %>"><a class="page-link" href="/posts/<%= board.name %><%= getPostQueryString(false, {page:i}) %>"> <%= i %> </a></li>
               <% } else if(i==2 || i==maxPage-1){ %>
                 <li><a class="page-link">...</a></li>
               <% } %>
             <% } %>
             <li class="page-item <%= nextBtnEnabled?'':'disabled' %>">
-              <a class="page-link" href="/posts/<%= board.board %><%= getPostQueryString(false, {page:currentPage+1}) %>" <%= nextBtnEnabled?'':'tabindex=-1' %>>»</a>
+              <a class="page-link" href="/posts/<%= board.name %><%= getPostQueryString(false, {page:currentPage+1}) %>" <%= nextBtnEnabled?'':'tabindex=-1' %>>»</a>
             </li>
           </ul>
         </nav>
