moved bagutterbox.js to gallery.ejs

--- a/views/home/gallery.ejs
+++ b/views/home/gallery.ejs
@@ -2,7 +2,14 @@
 <html>
 <head>
   <%- include('../partials/head') %>
+  
+  <!-- baguetteBox -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" async></script>
+
+  <!-- Gallery Grid -->
   <link rel="stylesheet" href="/css/gallery.css">
+
 </head>
 <body>
   <%- include('../partials/nav') %>
