--- a/views/posts/partials/comment-show.ejs
+++ b/views/posts/partials/comment-show.ejs
@@ -14,7 +14,7 @@
         <% if (post.author.id == comment.author.id) { %>
           <small class="c-badge">글쓴이</small>
         <% } if (comment.author.rank) { %>
-          <small class="c-badge">글쓴이</small>
+          <small class="c-badge"><%= comment.author.rank.display %></small>
         <% } else { %>
           <div style="height: 20px;">&nbsp;</div>
         <% } if (post.author.id != comment.author.id) { %>
